--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "2.0",
+        "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "10.0"
     },
